fix: Allow content (date-pickers, etc.) to overflow `.Modal`

--- a/modules/hanna-css/src/css/Modal.scss
+++ b/modules/hanna-css/src/css/Modal.scss
@@ -39,7 +39,6 @@
     position: relative;
     width: 95%;
     margin: 0 auto;
-    overflow: hidden;
     padding: var(--Modal--paddingV) var(--Modal--paddingH);
     background-color: #fff;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
@@ -81,11 +80,28 @@
     bottom: 0;
     left: 0;
     right: 0;
-    margin: var(--Modal--paddingV) calc(0.5 * var(--Modal--paddingH));
+    overflow: hidden;
+    overflow: clip;
     pointer-events: none;
   }
+  .Modal__blings__inner {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: var(--Modal--paddingV) calc(0.5 * var(--Modal--paddingH));
+  }
 
-  .Modal__blings > :not(.Bling) {
+  // @deprecated  Remove this selector in v0.9
+  .Modal__blings > :not(.Bling):not(.Modal__blings__inner) {
+    @include WARNING__('Only place .Bling content inside .Modal__blings');
+  }
+  // // FIXME: Enable this instead in v0.9
+  // .Modal__blings > not(.Modal__blings__inner) {
+  //   @include WARNING__('Only place .Modal__blings__inner inside .Modal__blings');
+  // }
+  .Modal__blings__inner > :not(.Bling) {
     @include WARNING__('Only place .Bling content inside .Modal__blings');
   }
 
